<resources>
    <string name="app_name">SofraNewApp</string>
    <string name="title_activity_order_food">OrderFoodActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">مرحبا بك..</string>
    <string name="nav_header_subtitle">تفضل بتسجيل الدخول</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="splash_text">التطبيق الاول لبيع وطلب الطعام</string>
    <string name="ptt_demend_food">طلب الطعام</string>
    <string name="ptt_sel_food">بيع الطعام</string>
    <string name="splash_text2">جميع الحقوق محفوظه لتطبيق سفره 2018</string>
    <string name="main">الصفحـه الرئيسيه</string>
    <string name="muorder">طلباتي</string>
    <string name="alerts">التنبيهات</string>
    <string name="newoffer"> جديد العروض</string>
    <string name="aboutapp">عن التطبيق</string>
    <string name="termcondetion">الشروط والاحكام</string>
    <string name="sharapp">شارك التطبيق</string>
    <string name="contactus">تواصل معنا</string>
    <string name="signout">خروج</string>
    <string name="newoffer1">عروضي</string>
    <string name="muorder1">منتجاتي</string>
    <string name="alerts1">\الطلبات المقدمه</string>
    <string name="comession">العموله</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_text">تفضل بتسجيل الدخول</string>
    <string name="text_edit_mail">البريد الاليكتروني</string>
    <string name="text_edit_pasword">كلمة المرور</string>
    <string name="text_forget_password">نسيت كلمة المرور؟</string>
    <string name="sing_in">تسجيل الدخول</string>
    <string name="new_acount">انشاء حساب جديد</string>
    <string name="string_name">الاسم</string>
    <string name="string_email">البريد الالكتروني</string>
    <string name="string_phone">الجوال</string>
    <string name="string_descripleving">وصف السكن</string>
    <string name="string_password">كلمة السر</string>
    <string name="string_confirmpassword">تاكيد كلمة السر</string>
    <string name="string_next">التالي</string>
    <string name="string_city">المدينه</string>
    <string name="string_adress">الحي</string>
    <string name="string_returant_name">اسم المطعم</string>
    <string name="string_continu">متابعه</string>
    <string name="string_minimumorder">الحد الادني للطلب</string>
    <string name="string_delivryfe">رسوم التوصيل</string>
    <string name="string_categoris">التصنيفات</string>
    <string name="string_contact_data">بيانات التواصل</string>
    <string name="string_whatsup">الواتس اب</string>
    <string name="string_textphoto">صورة المتجر</string>
    <string name="string_sinup">تسجيل</string>
    <string name="string_order_food">طلب الطعام</string>
    <string name="title_activity_sel_food">بيع الطعام</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_text_enter_email">برجاءادخال بريدك الاليكتروني</string>
    <string name="sing_send">ارسال</string>
    <string name="string_input_cod">برجاء ادخال الكود المرسل اليكم</string>
    <string name="input_cod">######</string>
    <string name="string_input_new_password">ادخل كلمة المرور الجديده</string>
    <string name="string_new_password">ادخل كلمة المرور الجديده</string>
    <string name="string_new_confirmpassword">اعادة ادخال كلمة المرور الجديده</string>
    <string name="sing_chang">تغيير</string>
    <string name="text_ftir_dmasq">تاج الفطيره الدمشقيه</string>
    <string name="open_naw">مفتوح الان</string>
    <string name="delivery_cost">رسوم التوصيل</string>
    <string name="order_minimum">الحد الادني من الطلب</string>
    <string name="item_name">سندوتش برجر تركي</string>
    <string name="item_descrip">سندوتش راب برجر محشي بقطع
                                  الدجاج الحاره والمتبله</string>
    <string name="item_pric">السعر</string>
    <string name="pric_num">20 ريال</string>
    <string name="curranc_num">ريال</string>
    <string name="text_add_new_item">اضافة منتج جديد</string>
    <string name="name_item">اسم المنتج</string>
    <string name="descrip_item">وصف مختصر للمنتج</string>
    <string name="pric_item">سعر المنتج</string>
    <string name="time_item">مدة تجهيز الطلب</string>
    <string name="text_item_photo">اضافة صورة المنتج</string>
    <string name="add">اضف</string>
    <string name="string_rest_name">المطعم</string>
    <string name="string_rest_rev">التعليق</string>
    <string name="string_date">التاريخ</string>
    <string name="text_add_comen">يسعدنا مشاركتك بتعليقك او تقييم</string>
    <string name="btt_add_comen">اضف تعليق او تقييم</string>
    <string name="review_resturant">قيم المطعم</string>
    <string name="add_comment">اضف تعليق</string>
    <string name="btt_add">اضف</string>
    <string name="string_rest_coment">اضف تعليق هنا</string>
    <string name="text_status">الحاله</string>
    <string name="city_text">المدينه</string>
    <string name="region_text">الحي</string>
    <string name="minimum_order">الحد الدني</string>
    <string name="delivery_fee_text">رسوم التوصيل</string>
    <string name="text_food_name">المطعم</string>
    <string name="text_price">السعر</string>
    <string name="user_name">اسم العميل</string>
    <string name="total">الاجمالي</string>
    <string name="address">العنوان</string>
    <string name="accept">قبول</string>
    <string name="refuese">رفض</string>
    <string name="coplet_order">الطلب مكتمل</string>
    <string name="no_ordeer_found">لايوجد طلبات حليه</string>
    <string name="offers_name">اسم العرض</string>
    <string name="product_decription">وصف مختصر</string>
    <string name="too">الي</string>
    <string name="frome">من</string>
    <string name="add_img_offer">اضافة صورة العرض</string>
    <string name="text_add_new_offer">اضافة عرض جديد</string>
    <string name="food_text_name">الطعام</string>
    <string name="the_sum">المجموع الكلي</string>
    <string name="excut_eorder">تنفيذ الطلب</string>
    <string name="add_more">اضافة المزيد</string>
    <string name="full_name">الاسم كاملا</string>
    <string name="mail">الاميل</string>
    <string name="phonen_umber">الهاتف</string>
    <string name="ptt_send">ارسال</string>
    <string name="follow_us">تابعنا علي :</string>
    <string name="suggest">اقتراح</string>
    <string name="select">استعلام</string>
    <string name="complain">شكوي</string>
    <string name="string_chang">تعديل</string>
    <string name="add_not">اضافة ملاحظات</string>
    <string name="adress_deliver">عنوان التوصيل</string>
    <string name="text_bayment">الدفع</string>


</resources>
