<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background_white"
    tools:context=".ui.frgment.clintorder.loginclint.ChangPasswordFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_input_cod"
        android:gravity="center"
        android:layout_marginTop="@dimen/album_dp_40"
        android:textSize="@dimen/album_dp_15"
        android:textColor="@color/colorBlack"

        />
    <EditText
        android:id="@+id/cod_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_dp_45"
        android:background="@drawable/ic_background_white"
        android:layout_marginStart="@dimen/album_dp_20"
        android:layout_marginEnd="@dimen/album_dp_20"
        android:layout_marginTop="@dimen/album_dp_20"
        android:hint="@string/input_cod"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:padding="@dimen/album_dp_10"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_input_new_password"
        android:gravity="center"
        android:layout_marginTop="@dimen/album_dp_40"
        android:textSize="@dimen/album_sp_16"

        android:textColor="@color/colorBlack"


        />


    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_dp_45"
        android:background="@drawable/ic_background_white"
        android:layout_marginStart="@dimen/album_dp_20"
        android:layout_marginEnd="@dimen/album_dp_20"
        android:layout_marginTop="@dimen/album_dp_20"
        android:hint="@string/string_new_password"
        android:inputType="numberPassword"
        android:padding="@dimen/album_dp_10"
        android:textAlignment="textEnd"
        android:textDirection="rtl"


        />
    <EditText
        android:id="@+id/new_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_dp_45"
        android:background="@drawable/ic_background_white"
        android:layout_marginStart="@dimen/album_dp_20"
        android:layout_marginEnd="@dimen/album_dp_20"
        android:layout_marginTop="@dimen/album_dp_10"
        android:padding="@dimen/album_dp_10"
        android:hint="@string/string_new_confirmpassword"
        android:inputType="numberPassword"
        android:textDirection="rtl"
        />
    <Button
        android:id="@+id/ptt_chang_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_dp_45"
        android:layout_marginStart="@dimen/album_dp_20"
        android:layout_marginEnd="@dimen/album_dp_20"
        android:layout_marginTop="@dimen/album_dp_30"
        android:background="#198A51"
        android:text="@string/sing_chang"
        />



</LinearLayout>