<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background_white"
    tools:context=".ui.frgment.clintorder.loginclint.ForgetPasswordFragment">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/album_dp_100"
        android:layout_marginStart="@dimen/album_dp_100"
        android:layout_marginTop="@dimen/album_dp_50"
        android:drawableStart="@drawable/signin_icon"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/album_dp_15"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_text_enter_email"
        android:gravity="center"
        android:textSize="@dimen/album_dp_15"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/album_dp_20"
        />

    <EditText
        android:id="@+id/Forget_edit_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_dp_45"
        android:layout_marginStart="@dimen/album_dp_40"
        android:layout_marginEnd="@dimen/album_dp_40"
        android:layout_marginTop="@dimen/album_dp_40"
        android:textDirection="ltr"
        android:background="@drawable/ic_background_white"
        android:hint="@string/text_edit_mail"
        android:textAlignment="textEnd"
        android:inputType="textEmailAddress"
        android:padding="@dimen/album_dp_10"
        />


    <Button
        android:id="@+id/ptt_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_dp_45"
        android:layout_marginStart="@dimen/album_dp_40"
        android:layout_marginEnd="@dimen/album_dp_40"
        android:layout_marginTop="@dimen/album_dp_30"
        android:background="#198A51"
        android:text="@string/sing_send"
        />
</LinearLayout>